--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "body-parser": "^1.19.0",
     "firebase": "^7.2.1",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
