--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "angular-datatables": "^8.0.0",
     "body-parser": "^1.19.0",
+    "datatables.net": "^1.10.20",
+    "datatables.net-dt": "^1.10.20",
     "firebase": "^7.2.1",
+    "firebase-admin": "^8.8.0",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
@@ -32,6 +36,7 @@
     "@angular/cli": "~8.3.9",
     "@angular/compiler-cli": "~8.2.9",
     "@angular/language-service": "~8.2.9",
+    "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.31",
