--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^7.2.1",
     "firebase-admin": "^8.8.0",
     "jquery": "^3.4.1",
+    "ngx-cookie-service": "^2.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
